[project]
name = "multi-source-intelligence-rag-agent"
version = "0.1.0"
description = "多源情报 RAG 分析 Agent：检索证据、调用工具并生成可追溯研判报告"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ranrango" }]
keywords = ["agent", "rag", "tool-calling", "osint", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
intelligence-agent = "src.app.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "black==24.8.0", "httpx"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
